Swagger docs for auth controller
