# backend/docs/swagger.yaml
@@ -354,6 +354,91 @@ info:
   title: Next Gen Job Hunting API
   version: "1.0"
 paths:
+  /auth/signin:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Signin successful
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Failed to generate token
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Log in a user
+      tags:
+      - Auth
+  /auth/signout:
+    post:
+      parameters:
+      - description: Auth Token
+        in: header
+        name: auth_token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Signout successful
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Failed to signout
+          schema:
+            $ref: '#/definitions/exception.CommonException'
+      summary: Log out a user
+      tags:
+      - Auth
+  /auth/signup:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Signup successful
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/exception.CommonException'
+        "500":
+          description: Failed to generate token
+          schema:
+            $ref: '#/definitions/exception.CommonException'
+      summary: Register a new user
+      tags:
+      - Auth
   /jobposts:
     get:
       description: Get all job posts
